Write a function that plays a single round of Rock Paper Scissors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
             return 'Scissors';
         }
       }
+      function playRound(playerSelection, computerSelection) {
+        playerSelection = playerSelection[0].toUpperCase()
+                        + playerSelection.substring(1).toLowerCase();
+        if (playerSelection == computerSelection) {
+          return "You draw!"
+        }
+        return (playerSelection == 'Rock' && computerSelection == 'Paper' ||
+                playerSelection == 'Paper' && computerSelection == 'Scissors' ||
+                playerSelection == 'Scissors' && computerSelection == 'Rock') ?
+               "You Lose! " + computerSelection + " beats " + playerSelection :
+               "You Win! " + playerSelection + " beats " + computerSelection;
+      }
     </script>
   </body>
 </html>
