Write a function to play a 5 round game that keeps score and reports a winner or loser at the end

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
       function computerPlay() {
         const selection = Math.random() * 3;
-        switch(Math.floor(selection)) {
+        switch (Math.floor(selection)) {
           case 0:
             return 'Rock';
           case 1:
@@ -18,16 +18,36 @@
         }
       }
       function playRound(playerSelection, computerSelection) {
-        playerSelection = playerSelection[0].toUpperCase()
-                        + playerSelection.substring(1).toLowerCase();
         if (playerSelection == computerSelection) {
-          return "You draw!"
+          return "You Draw!"
         }
         return (playerSelection == 'Rock' && computerSelection == 'Paper' ||
                 playerSelection == 'Paper' && computerSelection == 'Scissors' ||
                 playerSelection == 'Scissors' && computerSelection == 'Rock') ?
                "You Lose! " + computerSelection + " beats " + playerSelection :
                "You Win! " + playerSelection + " beats " + computerSelection;
+      }
+      function game() {
+        let computerWins = 0,
+            playerWins = 0,
+            playerSelection;
+        for (let i=0; i<5; i++) {
+          do {
+            playerSelection = prompt('Select "Rock", "Paper", or "Scissors"');
+            playerSelection = playerSelection.charAt(0).toUpperCase()
+                            + playerSelection.substring(1).toLowerCase();
+          } while (playerSelection != 'Rock' && playerSelection != 'Paper' && playerSelection != 'Scissors');
+          let roundResult = playRound(playerSelection, computerPlay());
+          console.log(roundResult);
+          if (roundResult.indexOf("Lose") == 4) {
+            computerWins++;
+          } else if (roundResult.indexOf("Win") == 4) {
+            playerWins++;
+          } 
+        }
+        console.log(computerWins > playerWins ? "The computer is the winner!" :
+                    playerWins > computerWins ? "You are the winner!" :
+                                                "You and the computer drew!");
       }
     </script>
   </body>
