--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <button>Rock</button>
     <button>Paper</button>
     <button>Scissors</button>
+    <div id="results"></div>
     <script src="code.js"></script>
   </body>
 </html>
