--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
-  </head>
+    <link rel="stylesheet" href="style.css">
+</head>
   <body>
     <button>Rock</button>
     <button>Paper</button>
     <button>Scissors</button>
+    <p id="score">Computer: <span id="computer">0</span> - You: <span id="you">0</span></p>
     <div id="results"></div>
     <script src="code.js"></script>
   </body>
